src/test/ui/generator/issue-68112.stderr
error: generator cannot be sent between threads safely
  --> $DIR/issue-68112.rs:33:5
   |
LL |     require_send(send_gen);
   |     ^^^^^^^^^^^^ generator is not `Send`
   |
   = help: the trait `Sync` is not implemented for `RefCell<i32>`
note: generator is not `Send` as this value is used across a yield
  --> $DIR/issue-68112.rs:31:9
   |
LL |         let _non_send_gen = make_non_send_generator();
   |             ------------- has type `impl Generator<Return = Arc<RefCell<i32>>>` which is not `Send`
LL |         yield;
   |         ^^^^^ yield occurs here, with `_non_send_gen` maybe used later
LL |     };
   |     - `_non_send_gen` is later dropped here
note: required by a bound in `require_send`
  --> $DIR/issue-68112.rs:22:25
   |
LL | fn require_send(_: impl Send) {}
   |                         ^^^^ required by this bound in `require_send`

error[E0277]: `RefCell<i32>` cannot be shared between threads safely
  --> $DIR/issue-68112.rs:52:5
   |
LL |     require_send(send_gen);
   |     ^^^^^^^^^^^^ `RefCell<i32>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `RefCell<i32>`
   = note: required because of the requirements on the impl of `Send` for `Arc<RefCell<i32>>`
   = note: required because it appears within the type `[generator@$DIR/issue-68112.rs:38:5: 41:6]`
   = note: required because it appears within the type `impl Generator<Return = Arc<RefCell<i32>>>`
   = note: required because it appears within the type `impl Generator<Return = Arc<RefCell<i32>>>`
   = note: required because it appears within the type `{impl Generator<Return = Arc<RefCell<i32>>>, ()}`
   = note: required because it appears within the type `[generator@$DIR/issue-68112.rs:48:20: 51:6]`
note: required by a bound in `require_send`
  --> $DIR/issue-68112.rs:22:25
   |
LL | fn require_send(_: impl Send) {}
   |                         ^^^^ required by this bound in `require_send`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
